--- a/package.json
+++ b/package.json
@@ -5,16 +5,16 @@
   "packageManager": "pnpm@9.4.0",
   "type": "module",
   "scripts": {
-    "build": "pnpm --filter=site build",
+    "build": "cd site && npm run build",
     "build:pkg": "pnpm -r --stream build:pkg",
     "build-fast:pkg": "pnpm -r --stream build-fast:pkg",
-    "dev": "pnpm --filter=site dev",
+    "dev": "cd site && npm run dev",
     "lint": "eslint .",
     "release": "pnpm build:pkg && pnpm build",
     "release:pkg": "pnpm release:pkg:check && pnpm release:pkg:version && pnpm -r publish",
     "release:pkg:check": "pnpm lint && pnpm build:pkg",
     "release:pkg:version": "bumpp package.json packages/*/package.json --commit \"build: publish v%s\" --all --tag --push",
-    "serve": "pnpm --filter=site serve"
+    "serve": "cd site && npm run serve"
   },
   "prettier": "@renovamen/prettier-config",
   "devDependencies": {
