--- a/site/package.json
+++ b/site/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "pnpm -r --filter='../packages/*' build:pkg && nuxt generate",
+    "build": "nuxt generate",
     "dev": "nuxt dev",
     "serve": "nuxt preview",
     "postinstall": "nuxt prepare"
